<resources>
    <string name="app_name">Topics Chat</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="topics_chat_logo">topics chat logo</string>
    <string name="registration_login_information_header">Login Information</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="registration_personal_information_header">Personal Information</string>
    <string name="full_name_hint">full name</string>
    <string name="birth_date_hint">birth date</string>
    <string name="register_button">Register</string>
    <string name="registration_create_account_succes_header">Create Account Succes</string>
    <string name="registration_success_description">Your account successfully created. Now, you can start chatting with your group and talk about any topics :)</string>
    <string name="create_group_menu">Create Group</string>
    <string name="open_setting_menu">Open Setting</string>
    <string name="no_group">Create or Join a \nGroup</string>
    <string name="create_group_header">Create Group</string>
    <string name="group_name_hint">group name</string>
    <string name="member_s_username_hint">member\'s username</string>
    <string name="create_group_button">create group</string>
    <string name="type_your_message_here_hint">type your message here...</string>
    <string name="topics_content_description">topics</string>
    <string name="send_button">Send</string>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="please_wait">please wait...</string>
</resources>
