<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="com.example.enkiprobo.topicschat.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:contentDescription="@string/topics_chat_logo"
        android:scaleType="center"
        android:src="@drawable/topics_chat_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_errorLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="ajaskdfhsa"
            android:textColor="@color/redError"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_usernameLogin"
            style="@style/default_text_editor_color"
            android:hint="@string/username_hint"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/et_passwordLogin"
            style="@style/default_text_editor_color"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bt_login"
            style="@style/default_button_style"
            android:layout_marginTop="20sp"
            android:onClick="keHalamanUtama"
            android:text="@string/login_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:onClick="keHalamanRegistrasi"
            android:text="@string/create_account_button" />
    </LinearLayout>


</LinearLayout>
