<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    android:padding="@dimen/padding_standard"
    tools:context="com.example.enkiprobo.topicschat.RegistrationSuccessActivity">

    <ImageView
        android:id="@+id/iv_topicLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/topics_chat_logo"
        android:maxHeight="30sp"
        android:maxWidth="30sp"
        android:scaleType="fitStart"
        android:src="@drawable/topics_chat_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_topicLogo"
        android:layout_marginTop="30sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_create_account_succes_header"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration_success_description" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-10sp"
        android:layout_marginLeft="-10sp"
        android:layout_marginRight="-10sp"
        android:layout_marginTop="-10sp"
        android:onClick="keHalamanLogin"
        android:padding="0sp"
        android:text="@string/login_button" />
</RelativeLayout>
