<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.enkiprobo.topicschat.NewGroupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_createGroup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_app_bar"
        android:layout_alignParentTop="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_below="@+id/tb_createGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_standard"
        android:layout_marginTop="20sp">

        <TextView
            android:textStyle="bold"
            android:textSize="@dimen/header_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group_header"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_createGroupName"
            android:inputType="textShortMessage"
            android:hint="@string/group_name_hint"/>

        <EditText
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/member_s_username_hint"
            android:id="@+id/et_createMemberUsername"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/create_group_button"
        android:onClick="mendaftarkanGroup"/>
</RelativeLayout>
