<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_main"
    tools:context="com.example.enkiprobo.topicschat.GroupChatActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_chatGroup"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_app_bar"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_chatList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rv_topicList"
        android:layout_below="@+id/tb_chatGroup">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_topicList"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_above="@+id/ly_createTopic"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/ly_createTopic"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:layout_above="@+id/rl_chatting"
        android:background="@drawable/riple_user_group"
        android:paddingLeft="20sp"
        android:visibility="gone"
        android:clickable="true"
        android:onClick="buatTopicBaru">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_black_24dp" />

        <TextView
            android:id="@+id/tv_addNewTopic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15sp"
            android:gravity="center"
            android:text="add new topic"
            android:textColor="#66000000" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_chatting"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorPrimary"
        android:elevation="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_chatTopics"
            android:layout_width="40sp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/topics_content_description"
            android:onClick="bukaTopic"
            android:scaleType="center"
            android:src="@drawable/ic_label_black_24dp" />

        <EditText
            android:id="@+id/et_chatMessage"
            style="@style/default_text_editor_color"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10sp"
            android:layout_toLeftOf="@+id/bt_chatSend"
            android:layout_toRightOf="@+id/iv_chatTopics"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/type_your_message_here_hint"
            android:textColorHint="@color/purpleSlow" />

        <Button
            android:id="@+id/bt_chatSend"
            style="@style/default_button_style"
            android:layout_width="60sp"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:onClick="kirimPesan"
            android:text="@string/send_button" />
    </RelativeLayout>
</RelativeLayout>
